--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@
 
  /* general */
 
-
+* {
+    font-family: sans-serif;
+}
 
 /* utilities */
 
@@ -40,9 +42,33 @@
 
 /* main */
 
+/* JUMBOTRON */
+
 .jumbotron {
-    background-color: #E1D67A;
-    height: 400px;
+    background-image: url(../img/banner.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 15px;
+    height: 520px;
+    position: relative;
+}
+
+.jumbotron::after {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.2);
+    content: '';
+}
+
+.jumbotron-text{
+    width: 50%;
+    height: fit-content;
+    position: absolute;
+    bottom: 100px;
+    left: 50px;
+    color: white;
+    font-size: 1,5em;
 }
 
 /* columns */
