--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,12 @@
     clear: both;
 }
 
- /* general */
+ /* generics */
 
-* {
+body {
     font-family: sans-serif;
 }
+
 
 /* utilities */
 
@@ -48,7 +49,7 @@
     background-image: url(../img/banner.jpg);
     background-position: center;
     background-size: cover;
-    border-radius: 15px;
+    border-radius: 10px;
     height: 520px;
     position: relative;
 }
@@ -58,6 +59,7 @@
     height: 100%;
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
     content: '';
 }
 
@@ -68,37 +70,74 @@
     bottom: 100px;
     left: 50px;
     color: white;
-    font-size: 1,5em;
+    font-size: 1.5em;
 }
 
 /* columns */
+
 
 main>:not(.jumbotron) {
     background-color: #0187FA;
 }
 
+/* column-header */
+
 .column-header {
     background-color: #ABCFE7;
     height: 75px;
+    padding: 10px;
     margin-bottom: 20px;
+}
+
+.column-header h1{
+    /* TODO sistemare font weight e family */
+}
+
+/* column */
+
+.column figure {
+    max-height: 227px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.column img {
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+figure::after {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 1);
+    border-radius: 10px;
+    content: '';
+}
+
+
+.row {
+    margin: 20px -10px;
 }
 
 .column {
     background-color: #ABCFE7;
     height: 500px;
     float: left;
-    margin-bottom: 20px;
+    margin: 20px 10px;
 }
 
-.column-right,.column-left {
-    width: 25%;
+.column-side {
+    width: calc(20% - 20px);
 }
 
-.column-middle {
-    width: calc(50% - 40px);
-    margin-right: 20px;
-    margin-left: 20px;
+.column-center {
+    width: calc(60% - 20px);
 }
+
+
+
 
 /* footer */
 
