--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,32 @@ body {
     margin-top: 20px;
 }
 
-/* main-header */
+/* MAIN HEADER */
 .main-header {
     margin: 20px auto;
 }
 
+/* logo */
 .logo {
     height: 60px;
     width: auto;
 }
 
+/* barra di navigazione */
 
-/* main */
+nav li {
+    display: inline-block;
+    margin-right: 20px;
+    padding: 30px 0 20px;
+}
+
+
+nav a{
+    text-decoration: none;
+    color: #A8A8A8;
+}
+
+/* MAIN */
 
 /* JUMBOTRON */
 
