--- a/css/style.css
+++ b/css/style.css
@@ -93,20 +93,14 @@ nav a{
 }
 
 
-/* columns */
-
-
-main>:not(.jumbotron) {
-    background-color: #0187FA;
-}
+/* COLUMNS */
 
 /* column-header */
 
 .column-header {
-    background-color: #ABCFE7;
-    height: 75px;
-    padding: 10px;
+    padding: 10px 0;
     margin-bottom: 20px;
+    font-size: 1.2em;
 }
 
 .column-header h1{
@@ -115,7 +109,36 @@ main>:not(.jumbotron) {
 
 /* column */
 
-.column figure {
+.col-image {
+    height: 250px;
+    border-radius: 10px;
+    background-position: center;
+    background-size: cover;
+}
+
+.col-image::after {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    content: ''; 
+}
+
+.col-image.money-tree {
+    background-image: url(../img/img-1.jpg);
+}
+
+.col-image.focus {
+    background-image: url(../img/banner-2.jpg);
+}
+
+
+.col-image.bright-ideas {
+    background-image: url(../img/img-3.jpg);
+}
+
+/* .column figure {
     max-height: 227px;
     overflow: hidden;
     border-radius: 10px;
@@ -134,7 +157,7 @@ figure::after {
     background-color: rgba(0, 0, 0, 1);
     border-radius: 10px;
     content: '';
-}
+} */
 
 
 .row {
@@ -142,18 +165,23 @@ figure::after {
 }
 
 .column {
-    background-color: #ABCFE7;
-    height: 500px;
     float: left;
     margin: 20px 10px;
+    font-size: 18px;
+    color: #A8A8A8;
+}
+
+.column h4 {
+    color: #636363;
+    margin: 10px 0;
 }
 
 .column-side {
-    width: calc(20% - 20px);
+    width: calc(25% - 20px);
 }
 
 .column-center {
-    width: calc(60% - 20px);
+    width: calc(50% - 20px);
 }
 
 
@@ -162,7 +190,6 @@ figure::after {
 /* footer */
 
 .footer {
-    height: 50px;
     margin-top: 15px;
     margin-bottom: 20px;
     font-size: 1.2em;
