--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,8 @@
  /* generics */
 
 body {
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
-
 
 /* utilities */
 
@@ -83,13 +82,13 @@ nav a{
     bottom: 80px;
     left: 50px;
     color: white;
-    font-size: 18px;
+    font-size: 16px;
 
 }
 
 .jumbotron h2{
-    font-weight: 100;
-    font-size: 32px;
+    font-weight: 400;
+    font-size: 30px;
 }
 
 
@@ -100,11 +99,17 @@ nav a{
 .column-header {
     padding: 10px 0;
     margin-bottom: 20px;
-    font-size: 1.2em;
 }
 
 .column-header h1{
-    /* TODO sistemare font weight e family */
+    font-family: sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.column-header h3 {
+    font-weight: normal;
+    color: #A8A8A8;
 }
 
 /* column */
