--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@ nav a{
     left: 50px;
     color: white;
     font-size: 16px;
-
 }
 
 .jumbotron h2{
@@ -112,7 +111,7 @@ nav a{
     color: #A8A8A8;
 }
 
-/* column */
+/* columns */
 
 .col-image {
     height: 250px;
@@ -171,7 +170,7 @@ figure::after {
 
 .column {
     float: left;
-    margin: 20px 10px;
+    padding: 0 10px;
     font-size: 18px;
     color: #A8A8A8;
 }
@@ -182,11 +181,11 @@ figure::after {
 }
 
 .column-side {
-    width: calc(25% - 20px);
+    width: 25%;
 }
 
 .column-center {
-    width: calc(50% - 20px);
+    width: 50%;
 }
 
 
