--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,14 @@
     box-sizing: border-box;
 }
 
-.clearfix::after {
-    content: '';
-    display: table;
-    clear: both;
-}
-
  /* generics */
 
 body {
     font-family: 'Montserrat', sans-serif;
+}
+
+img {
+    max-width: 100%;
 }
 
 /* utilities */
@@ -29,13 +27,20 @@ body {
     margin-top: 20px;
 }
 
+.clearfix::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+
 /* MAIN HEADER */
 .main-header {
     margin: 20px auto;
 }
 
 /* logo */
-.logo {
+#logo {
     height: 60px;
     width: auto;
 }
@@ -113,7 +118,62 @@ nav a{
 
 /* columns */
 
-.col-image {
+.row {
+    margin: 20px -10px;
+}
+
+.column {
+    float: left;
+    padding: 0 10px;
+    font-size: 18px;
+    color: #A8A8A8;
+}
+
+.column h4 {
+    color: #636363;
+    margin: 10px 0;
+}
+
+.column-side {
+    width: 25%;
+}
+
+.column-center {
+    width: 50%;
+}
+
+/* column images */
+
+
+.column img {
+    height: 227px;
+    width: 100%;
+    overflow: hidden;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+figure {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+figure::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+/* .col-image {
     height: 250px;
     border-radius: 10px;
     background-position: center;
@@ -140,53 +200,10 @@ nav a{
 
 .col-image.bright-ideas {
     background-image: url(../img/img-3.jpg);
-}
-
-/* .column figure {
-    max-height: 227px;
-    overflow: hidden;
-    border-radius: 10px;
-}
-
-.column img {
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-figure::after {
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    background-color: rgba(0, 0, 0, 1);
-    border-radius: 10px;
-    content: '';
 } */
 
 
-.row {
-    margin: 20px -10px;
-}
 
-.column {
-    float: left;
-    padding: 0 10px;
-    font-size: 18px;
-    color: #A8A8A8;
-}
-
-.column h4 {
-    color: #636363;
-    margin: 10px 0;
-}
-
-.column-side {
-    width: 25%;
-}
-
-.column-center {
-    width: 50%;
-}
 
 
 
